--- a/wiki/excellence.wikitext
+++ b/wiki/excellence.wikitext
@@ -1,17 +1,17 @@
 '''ex·cel·lence''' (F. excellence, L. excellentia.)
 n.
 
-#The quality of being excellent; state of possessing good qualities in an eminent degree; exalted merit; superiority in virtue. 
+#The quality of being excellent; state of possessing good qualities in an [[eminent]] degree; [[exalted]] [[merit]]; [[superiority]] in [[virtue]]. 
 #Something in which one excels.
-#An excellent or valuable quality; that by which any one excels or is eminent; a virtue.
-#A title of honor or respect; -- more common in the form excellency.
+#An [[excellent]] or [[valuable]] [[quality]]; that by which any one excels or is [[eminent]]; a virtue.
+#A title of [[honor]] or [[respect]]; -- more common in the form excellency.
 
 
 '''Synonyms:'''
-#Superiority
-#pre["e]minence
-#perfection
-#worth
-#goodness
-#purity
-#greatness
+#[[superiority]]
+#[[pre-eminence]]
+#[[perfection]]
+#[[worth]]
+#[[goodness]]
+#[[purity]]
+#[[greatness]]
