--- a/wiki/excellence.wikitext
+++ b/wiki/excellence.wikitext
@@ -3,7 +3,7 @@ n.
 
 #The quality of being excellent; state of possessing good qualities in an [[eminent]] degree; [[exalted]] [[merit]]; [[superiority]] in [[virtue]]. 
 #Something in which one excels.
-#An [[excellent]] or [[valuable]] [[quality]]; that by which any one excels or is [[eminent]]; a virtue.
+#An [[excellent]] or [[valuable]] [[quality]]; that by which any one excels or is [[eminent]]; a [[virtue]].
 #A title of [[honor]] or [[respect]]; -- more common in the form excellency.
 
 
