--- a/wiki/Java.wikitext
+++ b/wiki/Java.wikitext
@@ -15,6 +15,7 @@ Ja"va
 
 *[[Catalan]]: Java (1)
 *[[Dutch]]: Java ''n'' (1,3)
+*[[Finnish]]: Jaava (1)
 *[[French]]: Java ''f'' (1), Java ''m'' (3)
 *[[Interlingua]]: Java (1, 3); [[caffe]] (2)
 *[[Italian]]: [[Giava]] (1), Java ''m'' (3)
