/* Translations */ +fi <Mecca#66310>

--- a/wiki/Mecca.wikitext
+++ b/wiki/Mecca.wikitext
@@ -12,6 +12,7 @@
 *Chinese: [[麥加]]
 *Danish: [[Mekka#Danish|Mekka]]
 *Dutch: [[Mekka#Dutch|Mekka]]
+*Finnish: [[Mekka#Finnish|Mekka]]
 *French: [[La Mecque]]
 *German: [[Mekka#German|Mekka]]
 *Italian: [[La Mecca]]
