/* Translations */ +fi <Vienna#35502>

--- a/wiki/Vienna.wikitext
+++ b/wiki/Vienna.wikitext
@@ -12,6 +12,7 @@
 *Croatian: [[Beč]]
 *Czech: [[Vídeň]]
 *Dutch: [[Wenen]]
+*Finnish: [[Wien]]
 *French: [[Vienne]]
 *Georgian: [[ვენა]] (Vena)
 *German: [[Wien]]
