--- a/wiki/Neptune.wikitext
+++ b/wiki/Neptune.wikitext
@@ -6,7 +6,7 @@
 
 ==== Translations ====
 *Dutch: [[neptunus]] ''n''
-*Finnish: [[Neptunus]] (2)
+*Finnish: [[Neptunus]] (1, 2)
 *French: [[neptune]] ''m''
 *German: [[Neptun]] ''m''
 *Lithuanian: [[Neptūnas]] ''m''
