--- a/wiki/excellence.wikitext
+++ b/wiki/excellence.wikitext
@@ -8,10 +8,10 @@ n.
 
 
 '''Synonyms:'''
-#[[superiority]]
-#[[pre-eminence]]
-#[[perfection]]
-#[[worth]]
-#[[goodness]]
-#[[purity]]
-#[[greatness]]
+*[[superiority]]
+*[[pre-eminence]]
+*[[perfection]]
+*[[worth]]
+*[[goodness]]
+*[[purity]]
+*[[greatness]]
