--- a/wiki/genius.wikitext
+++ b/wiki/genius.wikitext
@@ -1,3 +1,5 @@
+==Etymology==
+From Latin genius, household guardian spirit
 ==English==
 ===Noun===
 #possessing extraordinary [[intelligence]] or skill
