--- a/wiki/annex.wikitext
+++ b/wiki/annex.wikitext
@@ -1,1 +1,7 @@
-The ancient city of petra was annexed by Rome. And the romans destroyed its economy by sending all trade through Rome instead of Petra.
+==English==
+===Noun===
+#an addition, an extension
+
+===Verb===
+#to add something to another, to incorporate into
+:The ancient city of Petra was annexed by Rome. And the Romans destroyed its economy by sending all trade through Rome instead of Petra.
