--- a/wiki/meef.wikitext
+++ b/wiki/meef.wikitext
@@ -17,4 +17,4 @@ Coined approx 1993; [[onomatopoeic]] and influenced by [[meep]].
 '''meef'''
 
 #A word of general meaning.
-#:''Theres nothing to do, meef.''
+#:''Theres nothing to do,but eat meef.''
