--- a/wiki/meef.wikitext
+++ b/wiki/meef.wikitext
@@ -18,6 +18,6 @@ Coined approx 1993; [[onomatopoeic]] and influenced by [[meep]].
 
 #A word of general meaning.
 #:''Theres nothing to do,but eat meef.''
-''I have meef in my shorts.''
-''My weiner taste like meef.''
-''You can call me meef daddy.''
+#:''I have meef in my shorts.''
+#:''My weiner taste like meef.''
+#:''You can call me meef daddy.''
