members are also organs <member#42113>

--- a/wiki/member.wikitext
+++ b/wiki/member.wikitext
@@ -1,7 +1,7 @@
 ===Noun===
 '''member'''
-
-One who offically belongs to a group.
+#One who offically belongs to a [[group]].
+#A part of a [[body]], an organ.
 
 ====Related terms====
 *[[membership]]
