Instead of removing, simply updated the definition <integrity#1607579>

--- a/wiki/integrity.wikitext
+++ b/wiki/integrity.wikitext
@@ -1,11 +1,18 @@
+'''in·teg·ri·ty''' (L. integritas)
+n.
+
+#Adhering to a strict ethical code
+#The state of being wholesome; unimpaired
+#The quality or condition of being complete; pure
+
 '''Synonyms:'''
-#honesty
-#uprightness
-#rectitude
-#unity
-#wholeness
-#purity
-#goodness
-#probity
-#sincerity
-#virtue
+*honesty
+*uprightness
+*rectitude
+*unity
+*wholeness
+*purity
+*goodness
+*probity
+*sincerity
+*virtue
