--- a/wiki/commitment.wikitext
+++ b/wiki/commitment.wikitext
@@ -2,11 +2,11 @@
 n.
 
 #The act or an instance of committing,putting in charge, keeping, or trust, especially:
-**The act of sending a legislative bill to committee for review
-**Official consignment sending a person to prison or a mental health institution
+##The act of sending a legislative bill to committee for review
+##Official consignment sending a person to prison or a mental health institution
 
 #Promise or agreement to do something in the future, especially:
-**assuming a financial obligation at a future date
+##assuming a financial obligation at a future date
 
 #Being bound emotionally/intellectually to a course of action or to another person(s)
 #Perpetration, in a negative manner, as in a crime or mistake
