--- a/wiki/commitment.wikitext
+++ b/wiki/commitment.wikitext
@@ -1,37 +1,37 @@
 '''com·mit·ment'''
 n.
 
-#The act or an instance of committing,putting in charge, keeping, or trust, especially:
-#*The act of sending a legislative bill to committee for review
-#*Official consignment sending a person to prison or a mental health institution
+#The act or an instance of committing, putting in charge, keeping, or trust, especially:
+#*The act of sending a [[legislative]] bill to committee for review
+#*Official [[consignment]] sending a person to prison or a mental health institution
 #Promise or agreement to do something in the future, especially:
-#*assuming a financial obligation at a future date
+#*Assuming a financial [[obligation]] at a future date
 #Being bound emotionally/intellectually to a course of action or to another person(s)
-#Perpetration, in a negative manner, as in a crime or mistake
+#[[Perpetration]], in a negative manner, as in a crime or mistake
 #State of being pledged or engaged
-#The trait of sincerity and focused purpose
+#The [[trait]] of [[sincerity]] and focused purpose
 
 
 '''Synonyms:'''
-*committedness
-*allegiance
-*loyalty
-*dedication
-*committal
-*consignment
-*charge
-*duty
-*devoir
-*engagement
-*guarantee
-*liability
-*must
-*need
-*obligation
-*ought
-*pledge
-*promise
-*responsibility
-*undertaking
-*vow
-*word
+*[[committedness]]
+*[[allegiance]]
+*[[loyalty]]
+*[[dedication]]
+*[[committal]]
+*[[consignment]]
+*[[charge]]
+*[[duty]]
+*[[devoir]]
+*[[engagement]]
+*[[guarantee]]
+*[[liability]]
+*[[must]]
+*[[need]]
+*[[obligation]]
+*[[ought]]
+*[[pledge]]
+*[[promise]]
+*[[responsibility]]
+*[[undertaking]]
+*[[vow]]
+*[[word]]
