/* Verb */ linking <extension#61777>

--- a/wiki/extension.wikitext
+++ b/wiki/extension.wikitext
@@ -4,9 +4,9 @@
 
 '''to extension'''
 
-#The act of extending or the state of being extended; a stretching out; enlargement in breadth or continuation of length; increase; augmentation; expansion.
+#The act of [[extend]]ing or the state of being extended; a [[stretch]]ing out; enlargement in breadth or continuation of length; increase; augmentation; expansion.
 #That property of a body by which it occupies a portion of space.
 #Capacity of a concept or general term to include a greater or smaller number of objects; -- correlative of intension.
 #The operation of stretching a broken bone so as to bring the fragments into the same straight line.
-#The straightening of a limb, in distinction from flexion.
+#The straightening of a limb, in distinction from [[flexion]].
 #A written engagement on the part of a creditor, allowing a debtor further time to pay a debt.
