--- a/wiki/flexion.wikitext
+++ b/wiki/flexion.wikitext
@@ -12,4 +12,4 @@ American ([[SAMPA]]): [flEkS@n]
 
 '''flexion'''
 
-#The act of bending a joint, esp. a bone joint.
+#The act of bending a joint, esp. a bone joint.  The counteraction of [[extension]].
