--- a/wiki/hemopoiesis.wikitext
+++ b/wiki/hemopoiesis.wikitext
@@ -1,1 +1,4 @@
-Hemopoeisis is the formation of new cellular components of the blood such as red or white blood cells in myeloid or lymphatic tissue.
+==English==
+===Noun===
+'''Hemopoeisis'''
+# formation of new [[cellular]] components of the [[blood]] in [[myeloid]] or [[lymphatic]] tissue.
