--- a/wiki/perform.wikitext
+++ b/wiki/perform.wikitext
@@ -1,6 +1,6 @@
 ==Transitive Verb==
 
-# Present on stage; Put on a show
+# Present on [[stage]]; Put on a [[show]]
 ''She will perform in the play''
 
 ===Translations===
