--- a/wiki/phase.wikitext
+++ b/wiki/phase.wikitext
@@ -1,10 +1,10 @@
 ==English==
 ===Noun===
 '''phase''' (''plural'' '''phases''')
-#That which is exhibited to the eye; the appearance which anything manifests, especially any one among different and varying appearances of the same object.
-#Any appearance or aspect of an object of mental apprehension or view; as, the problem has many phases.
+#That which is exhibited to the eye; the [[appearance]] which anything manifests, especially any one among different and varying appearances of the same object.
+#Any appearance or [[aspect]] of an object of mental apprehension or view; as, the problem has many phases.
 #A particular appearance or state in a regularly recurring cycle of changes with respect to quantity of illumination or form of enlightened disk; as, the phases of the moon or planets. See Illust. under Moon.
-#Any one point or portion in a recurring series of changes, as in the changes of motion of one of the particles constituting a wave or vibration; one portion of a series of such changes, in distinction from a contrasted portion, as the portion on one side of a position of equilibrium, in contrast with that on the opposite side.
+#Any one point or [[portion]] in a recurring series of [[change]]s, as in the changes of motion of one of the particles constituting a wave or vibration; one portion of a series of such changes, in distinction from a contrasted portion, as the portion on one side of a position of equilibrium, in contrast with that on the opposite side.
 
 ===Verb (transitive)===
 '''to phase''' (phasing, phased)
