--- a/wiki/Amerindian.wikitext
+++ b/wiki/Amerindian.wikitext
@@ -1,9 +1,10 @@
-===Derivation===
-Blend of [[American]] + [[Indian]]
+==English
+===Etymology===
+Portmonteau word of [[American]] + [[Indian]]
 
 ===Noun===
 '''Amerindian'''
 # a [[Native American]], an American Indian
 
-===Related terms===
+====Related terms====
 * [[Amerind]]
