--- a/wiki/indigenous.wikitext
+++ b/wiki/indigenous.wikitext
@@ -1,4 +1,4 @@
 ===Adjective===
 '''indigenous'''
 
-# Naturally associated with
+# Naturally associated with, that which was present before an [[intrusion]]
