remove inline interwiki <root#39505>

--- a/wiki/root.wikitext
+++ b/wiki/root.wikitext
@@ -25,7 +25,7 @@
 
 ==== Translations ====
 *Bulgarian: [[корен]] (koren)
-*Catalan: [[arrel]] ''f'' [[:ca:arrel|(ca)]] 
+*Catalan: [[arrel]] ''f''
 *Czech: [[kořen]]
 *Dutch: [[wortel]]
 *Finnish: [[juuri]]
