fmt, ln <tract#4957>

--- a/wiki/tract.wikitext
+++ b/wiki/tract.wikitext
@@ -1,8 +1,9 @@
-== [[noun]] ==
-#an area or expanse of land.
+==English==
+=== Noun ===
+#an [[area]] or [[expanse]] of land.
 #a series of connected body organs, as in the ''[[digestive tract]]''.
-#a small booklet such as a pamphlet, often for promotional or informational uses.
-===Translations===
+#a small [[booklet]] such as a [[pamphlet]], often for promotional or informational uses.
+====Translations====
 *[[Catalan]]: [[extensió]] ''f'' (1); [[tracte]] ''m'' (2); [[tractat]] ''m'', [[fullet]] ''m'', [[opuscle]] ''m'' (3) 
 *[[Dutch]]: [[gebied]] ''n'' (1), [[kanaal]] ''n'', [[stelsel]] ''n'' (2)
 *[[German]]: [[Gebiet]] ''n'' (1), [[Trakt]] ''m'' (2), [[Traktat]] ''n'' (3)
