--- a/wiki/chapter.wikitext
+++ b/wiki/chapter.wikitext
@@ -3,6 +3,7 @@
 '''chapter''' (''plural:'' [[chapters]])
 
 #One of the main [[section]]s into which the text of a [[book]] is divided.
+#An administrative division of an [[organization]], usually [[local]] to a specific [[area]]
 
 ==== Translations ====
 *Dutch: [[hoofdstuk]] ''n''
