--- a/wiki/organization.wikitext
+++ b/wiki/organization.wikitext
@@ -3,12 +3,12 @@
 ===Noun===
 '''organization'''
 
-# The quality of being organized.
+# The [[quality]] of being [[organize]]d.
 #: ''This painting shows little organization at first glance, but little by little the structure becomes clear.''
-# A group of people or other legal entities with an explicit purpose and written rules.
+# A [[group]] of people or other legal entities with an explicit purpose and written [[rule]]s.
 #: ''In response to the crisis, the nations in the region formed an organization.''
 #: ''If you want to be part of this organization, you have to follow its rules.''
-# A group of people consciously cooperating.
+# A group of [[people]] consciously cooperating.
 #: ''Over time, the spontaneous movement had become an organization.''
 
 ===Related Terms===
