--- a/wiki/penis.wikitext
+++ b/wiki/penis.wikitext
@@ -23,6 +23,7 @@ From Latin '''penis''', ''[[tail]]'' or ''penis''
 *[[fire hose]] (''slang'')
 *[[hose]] (''slang'')
 *[[Jimmy]] (''slang'')
+*[[Johnson]] (''slang'')
 *[[John Thomas]] (''dated'') <!-- Or is it still used outside Lady Chatterley's Lover? -->
 *[[joystick]] (''slang'')
 *[[knob]] (''slang'')
