--- a/wiki/quantum.wikitext
+++ b/wiki/quantum.wikitext
@@ -5,6 +5,7 @@
 #(''physics'') The smallest possible, and therefore indivisible, unit of a given quantity or quantifiable phenomenon.
 #:''Planck's constant is the quantum of angular momentum.''
 #:''The photon is the quantum of light.''
+#A property defineable as a number.  A [[quantity]].
 
 ----
 ==Latin==
