--- a/wiki/%D7%A9.wikitext
+++ b/wiki/%D7%A9.wikitext
@@ -1,3 +1,4 @@
+==Hebrew script==
 ===Letter===
 '''&#1513;''' (spelled ''[[shin]]'') is the twentyfirst letter of the [[Hebrew]] alphabet.
 :'''&#1513;&#1473;''' is shin, representing /&#643;/, /S/
@@ -5,5 +6,8 @@
 
 * '''Last''': [[&#1512;]]
 * '''Next''': [[&#1514;]]
+
+===See also===
+*[[ס]]
 
 [[Category:Hebrew letters]]
