--- a/wiki/quantum.wikitext
+++ b/wiki/quantum.wikitext
@@ -2,7 +2,7 @@
 ===Noun===
 '''quantum''' (''plural'' '''quanta''')
 
-#(''physics'') The smallest possible, and therefore indivisible, unit of a given quantity or quantifiable phenomenon.
+#(''physics'') The smallest possible, and therefore [[indivisible]], unit of a given quantity or quantifiable [[phenomenon]].
 #:''Planck's constant is the quantum of angular momentum.''
 #:''The photon is the quantum of light.''
 #A property defineable as a number.  A [[quantity]].
