+script name; +see also <ס#65404>

--- a/wiki/%D7%A1.wikitext
+++ b/wiki/%D7%A1.wikitext
@@ -1,7 +1,11 @@
+==Hebrew script==
 ===Letter===
 '''&#1505;''' (spelled ''[[samekh]]'') is the fifteenth letter of the [[Hebrew]] alphabet.
 
 * '''Last''': [[&#1504;]]
 * '''Next''': [[&#1506;]]
+
+===See also===
+*[[ש]]
 
 [[Category:Hebrew letters]]
