--- a/wiki/temporary.wikitext
+++ b/wiki/temporary.wikitext
@@ -3,7 +3,7 @@
 From Latin ''temporarius'' from ''tempus'' meaning "time"
 
 ===Adjective===
-#For a limited time.
+#For a limited [[time]], [[ephemeral]], not [[constant]]
 
 ===Noun===
 #One serving for a limited time
