--- a/wiki/constant.wikitext
+++ b/wiki/constant.wikitext
@@ -3,8 +3,8 @@
 
 ===Adjective===
 
-#Unchanged through time or space
-#(''Algebra'') having a fixed value
+#[[Unchanged]] through [[time]] or [[space]].  [[Permanent]].
+#(''Algebra'') having a fixed [[value]]
 
 ====Translations====
 
