--- a/wiki/value.wikitext
+++ b/wiki/value.wikitext
@@ -1,12 +1,12 @@
 =={{en}}==
 ===Noun===
 '''value'''
-#Relative darkness or lightness of a color; "I establish the colors and principal values by organizing the painting into three values--dark, medium...and light"-Joe Hing Lowe
-#The quality (positive or negative) that renders something desirable or valuable; "the Shakespearean Shylock is of dubious value in the modern world".
-#Numerical quantity measured or assigned or computed; "the value assigned was 16 milliseconds" 
-#An ideal accepted by some individual or group; "he has old-fashioned values"
-#The amount (of money or goods or services) that is considered to be a fair equivalent for something else; "he tried to estimate the value of the produce at normal prices" 
-#(music) the relative duration of a musical note 
+#Relative [[darkness]] or [[lightness]] of a color; "I establish the colors and principal values by organizing the painting into three values--dark, medium...and light"-Joe Hing Lowe
+#The [[quality]] (positive or negative) that renders something desirable or [[valuable]]; "the Shakespearean Shylock is of dubious value in the modern world".
+#[[Numerical]] [[quantity]] measured or [[assign]]ed or [[compute]]d; "the value assigned was 16 milliseconds" 
+#An [[ideal]] accepted by some individual or [[group]]; "he has old-fashioned values"
+#The [[amount]] (of [[money]] or [[goods]] or [[services]]) that is considered to be a fair [[equivalent]] for something else; "he tried to estimate the value of the produce at normal prices" 
+#(music) the relative [[duration]] of a musical note 
 
 ====Translations====
 *Finnish: [[valoisuus]] (1), [[valööri]] (1), [[arvo]] (2,3,4,5), [[kesto]] (6)
@@ -14,11 +14,11 @@
 
 ===Verb===
 '''to value'''
-#Estimate the value of; "How would you rate his chances to become President>"; "Gold was rated highly among the Romans" 
+#[[Estimate]] the value of; "How would you rate his chances to become President>"; "Gold was rated highly among the Romans" 
 #Place a value on; judge the worth of something; "I will have the family jewels appraised by a professional" 
 #Regard highly; think much of 
-#Fix or determine the value of; assign a value to, as of jewelry or art work 
-#Hold dear; "I prize these old photographs" 
+#Fix or [[determine]] the value of; assign a value to, as of jewelry or art work 
+#Hold dear; "I [[prize]] these old photographs" 
 
 ====Synonyms====
 
