--- a/wiki/service.wikitext
+++ b/wiki/service.wikitext
@@ -1,13 +1,18 @@
-==Noun==
-#
+==English==
+===Noun===
+#(''Economics'') That which is [[produce]]d, then [[trade]]d, bought or sold, then finally [[consume]]d and consists of an [[action]] or [[work]].
 
-===Translations===
+====Antonym====
+*[[goods]]
+*[[capital]]
+
+====Translations====
 *German: [[Service]] ''m'', [[Dienst]] ''m'' (1)
 *{{fi}}: [[palvelu]]
 *Hebrew: [[שרוט]] ''m''
 *{{sv}}: '''service'''
 
-==Verb==
+===Verb===
 #'''to serve'''
 #do [[maintenance]]
 
