--- a/wiki/service.wikitext
+++ b/wiki/service.wikitext
@@ -3,7 +3,7 @@
 #(''Economics'') That which is [[produce]]d, then [[trade]]d, bought or sold, then finally [[consume]]d and consists of an [[action]] or [[work]].
 
 ====Antonym====
-*[[good]]
+*[[good]] (2)
 *[[capital]]
 
 ====Translations====
