--- a/wiki/goods.wikitext
+++ b/wiki/goods.wikitext
@@ -3,5 +3,5 @@
 #(''Economics'') That which is [[produce]]d, then [[trade]]d, bought or sold, then finally [[consume]]d and consists of a physical item.
 
 ====Antonym====
-*[[service]]
+*[[services]]
 *[[capital]]
