--- a/wiki/capital.wikitext
+++ b/wiki/capital.wikitext
@@ -4,7 +4,7 @@
 
 # The most important [[city]] within a [[country]].
 #: Note: The term for a legislative seat is spelled capital. The building in which such an assembly meets is spelled [[capitol]].
-# [[Money]] and [[wealth]].
+# (''Economics'') [[Money]] and [[wealth]].  The means to acquire [[goods]] and [[services]], especially in a non-[[barter]] system.
 # An [[uppercase]] [[letter]].
 #''(Architecture):'' the uppermost part of a column
 
