--- a/wiki/exchange.wikitext
+++ b/wiki/exchange.wikitext
@@ -2,7 +2,7 @@
 
 === Transitive verb ===
 
-# To trade.
+# To [[trade]] or [[barter]].
 #: ''I'll glady exchange my place for yours.''
 # To replace with a similar item.
 #: ''I'd like to exchange this shirt for one in a larger size.''
@@ -11,7 +11,7 @@
 
 # An act of exchanging.
 #: ''All in all, it was an even exchange.''
-# A place for conducting trading.
+# A place for conducting [[trading]].
 #: ''The stock exchange is open for trading.''
 # (''telephony, US only?'') The fourth through sixth digits of a ten-digit phone number (the first three before the introduction of [[area code]]s).
 #: ''The 555 exchange is reserved for use by the phone company, which is why it's often used in films.''
