fmt; +stub message <Little Red Riding Hood#66653>

--- a/wiki/Little_Red_Riding_Hood.wikitext
+++ b/wiki/Little_Red_Riding_Hood.wikitext
@@ -1,3 +1,8 @@
-====Translations====
+==English==
+===Proper noun===
+'''[[Little]] [[Red]] [[Riding]] [[Hood]]'''<!-- wikify [[riding hood]] together if that's a term -->
 
+# {{substub}}
+
+====Translations====
 *German: [[Rotkäppchen]]
