--- a/wiki/positive.wikitext
+++ b/wiki/positive.wikitext
@@ -8,7 +8,7 @@
 
 ===Adjective===
 '''positive'''
-# Definitively laid down; explicitly stated; clearly expressed.
+# Definitively laid down; explicitly stated; clearly [[expressed]].
 #:''Positive words, that he would not bear arms against King Edward's son.''  --Bacon.
 # Occupying a real position, true existence or energy; existing in fact; real; actual.
 #: ''She gave a positive response to the question.''
@@ -33,7 +33,8 @@
 # Capable of being affirmed; reality.
 # That which settles by absolute appointment.
 # A preferred state of being or display
-# Denoting an excess of electrons; alkaline; charged.
+# Denoting an excess of [[proton]]s; alkaline; charged.  Not [[negative]] or [[neutral]].
+# Inherently beneficial.
 
 
 ===Translations===
