--- a/wiki/charge.wikitext
+++ b/wiki/charge.wikitext
@@ -4,7 +4,7 @@
 # the [[amount]] of money levied for a [[service]]
 # an [[instruction]]
 # an [[impetuous]] [[attack]]
-
+# an [[electromagnetic]] state that creates an attraction for its opposite.  A particle can be [[positive]]ly, [[negative]]ly or [[neutral]]ly charged.
 
 
 
