--- a/wiki/weak.wikitext
+++ b/wiki/weak.wikitext
@@ -11,6 +11,7 @@
 
 # lacking in [[force]] or [[ability]]
 # (''Grammar'') [[regular]]
+# (''Physics'') one of the four fundamental [[force]]s associated with nuclear decay
 
 ====Synonyms====
 *[[frail]] (1)
