--- a/wiki/gluon.wikitext
+++ b/wiki/gluon.wikitext
@@ -1,3 +1,3 @@
 ==English==
 ===Noun===
-#A subatomic particle that binds [[quark]]s together to form [[hadron]]s and other subatomic particles and is associated with the [[strong nuclear]] force.
+#A subatomic particle that binds [[quark]]s together to form [[baryon]]s and other composites formed from [[hadron]]s and is associated with the [[strong nuclear]] force.
