--- a/wiki/baryon.wikitext
+++ b/wiki/baryon.wikitext
@@ -1,1 +1,5 @@
+==English==
+===Noun===
+A heavy subatomic particle created by the binding of three [[quark]]s and/or anti-quarks by [[gluon]]s, are [[fermion]]s and have half-odd integral spin.  This category includes the common [[proton]] and [[neutron]] of the atomic core.
+
 [http://en.wikipedia.org/wiki/Baryon See the Wikipedia entry.]
