/* Noun */ larger <quark#56425>

--- a/wiki/quark.wikitext
+++ b/wiki/quark.wikitext
@@ -5,7 +5,7 @@ First used in 1963 by the discoverer of quarks, Murray Gell-Mann, to name these 
 ===Noun===
 '''quark''' ([[quarks]])
 
-#In the Standard Model, an elementary subatomic particle which forms [[matter]].  Quarks are never found alone in nature and combine to form [[hadron]]s, such as [[proton]]s and [[neutron]]s.
+#In the Standard Model, an elementary subatomic particle which forms [[matter]].  Quarks are never found alone in nature and combine to form larger [[hadron]]s, such as [[proton]]s and [[neutron]]s.
 
 ====Derived terms====
 *[[antiquark]]
