--- a/wiki/hadron.wikitext
+++ b/wiki/hadron.wikitext
@@ -1,3 +1,3 @@
 ==English==
 ===Noun===
-#Particles which are affected by the [[strong nuclear]] force, such as [[quark]]s.
+#Particles which are affected by the [[strong nuclear]] force, such as [[muon]]s.
