<strong nuclear force#66688>

--- a/wiki/strong_nuclear_force.wikitext
+++ b/wiki/strong_nuclear_force.wikitext
@@ -1,3 +1,3 @@
 ==English==
 ===Noun===
-#A [[fundamental force]] that is associated with the strong bonds, created by [[gluon]]s, between [[quark]]s and other subatomic particles.
+#A [[fundamental force]] that is associated with the strong bonds, created by the associated [[boson]]s known as [[gluon]]s, between [[quark]]s and other subatomic particles.
