--- a/wiki/gluon.wikitext
+++ b/wiki/gluon.wikitext
@@ -1,3 +1,3 @@
 ==English==
 ===Noun===
-#A [[boson]] that binds together [[quark]]s together to form [[baryon]]s, [[mesons]] and other [[hadron]]s and is associated with the [[strong nuclear]] force.
+#A gauge [[boson]] that binds together [[quark]]s together to form [[baryon]]s, [[mesons]] and other [[hadron]]s and is associated with the [[strong nuclear]] force.
