--- a/wiki/boson.wikitext
+++ b/wiki/boson.wikitext
@@ -1,3 +1,3 @@
 ==English==
 ===Noun===
-#A subatomic particle with totally symmetric composite quantum states, which exempts them from the Pauli exclusion principle, and that obey Bose-Einstein statistics.  Among them are many elementary particles, and some (gauge bosons) are known to carry the [[fundamental force]]s.
+#A particle with totally symmetric composite [[quantum]] states, which exempts them from the Pauli exclusion principle, and that obey Bose-Einstein statistics.  Among them are many elementary particles, and some (gauge bosons) are known to carry the [[fundamental force]]s.
