<weak nuclear force#66686>

--- a/wiki/weak_nuclear_force.wikitext
+++ b/wiki/weak_nuclear_force.wikitext
@@ -1,3 +1,3 @@
 ==English==
 ===Noun===
-#One of the four [[fundamental force]]s that is associated with nuclear decay.
+#One of the four [[fundamental force]]s that is associated with nuclear decay.  Its gauge [[boson]]s are the W<sup>+</sup>, W<sup>-</sup> and Z<sup>0</sup> particles.
