--- a/wiki/photon.wikitext
+++ b/wiki/photon.wikitext
@@ -4,4 +4,4 @@
 
 '''photon'''
 
-#The quantum of electromagnetic energy, regarded as a discrete particle having zero mass, no electric charge, and an indefinitely long lifetime.
+#The quantum of [[electromagnetic]] energy, regarded as a discrete particle having zero mass, no electric charge, and an indefinitely long lifetime.  It is a gauge [[boson]].
