--- a/wiki/fundamental_force.wikitext
+++ b/wiki/fundamental_force.wikitext
@@ -1,3 +1,3 @@
 ==English==
 ===Noun===
-#One of the four [[force]]s believed to be the primary forces in the universe, [[electromagnetism]], [[weak nuclear]], [[strong nuclear]] and [[gravity]].  ([[electroweak]] theory unifies the electromagnetic and weak forces)
+#One of the four [[force]]s believed to be the primary forces in the universe, [[electromagnetism]], [[weak nuclear]], [[strong nuclear]] and [[gravitation]].  ([[electroweak]] theory unifies the electromagnetic and weak forces)
