--- a/wiki/aurora.wikitext
+++ b/wiki/aurora.wikitext
@@ -1,3 +1,7 @@
+==English==
+===Noun===
+#An atmospheric phenomenon created by [[charge]]d [[particle]]s from the sun striking the upper [[atmosphere]], creating colored [[light]]s in the sky.  It is usually named austrealis or borealis based on whether it is in the southern or northern hemispheres respectively.
+
 ==Latin==
 ===Noun===
 '''aurora''' ''f'' ''[[Wiktionary Appendix:Latin first declension|1st declension]]''
