--- a/wiki/hinder.wikitext
+++ b/wiki/hinder.wikitext
@@ -9,3 +9,10 @@
 ===Verb===
 #To cause someone to be behind.
 #To make it difficult for someone or something to do something.
+
+*{{en}}: [[hinder]] [[:en:hinder|°]]
+*{{fr}}: [[entraver]] [[:fr:entraver|°]]
+*{{hu}}: [[akadályoz]] [[:hu:akadályoz|°]]
+*{{de}}: [[hindern]] [[:de:hindern|°]]
+*{{it}}: [[ostacolare]] [[:it:ostacolare|°]]
+*{{es}}: [[estorbar]] [[:es:estorbar|°]]
