--- a/wiki/afore.wikitext
+++ b/wiki/afore.wikitext
@@ -6,5 +6,5 @@ OE. afore, aforn, AS. onforan or ætforan; pref. a- + fore.
 IPA: [[WEAE]] /ʌ.foɹ/
 
 ===Adverb===
-# Before. (Obsolete except as part of the phrase [[afore-mentioned]]).
+# Before. (Obsolete except as part of the phrase [[aforementioned]]).
 # (Nautical) In the fore part of a vessel.
