--- a/wiki/allow.wikitext
+++ b/wiki/allow.wikitext
@@ -16,6 +16,13 @@ IPA: [[WEAE]] /ʌˈlaʊd/
 ====Synonyms====
 [[allot]]; [[assign]]; [[bestow]]; [[concede]]; [[admit]]; [[permit]]; [[suffer]]; [[tolerate]].
 
+*{{en}}: [[allow]] [[:en:allow|°]]
+*{{fr}}: [[laisser]] [[:fr:laisser|°]]
+*{{hu}}: [[enged]] [[:hu:enged|°]]
+*{{de}}: [[lassne]] [[:de:lassen|°]]
+*{{it}}: [[lasciare]] [[:it:lasciare|°]]
+*{{es}}: [[dejar]] [[:es:dejar|°]]
+
 <!-- material copied from Webster's Revised Unabridged Dictionary (1913) -->
 
 ===Intransitive Verb===
