--- a/wiki/allow.wikitext
+++ b/wiki/allow.wikitext
@@ -19,7 +19,7 @@ IPA: [[WEAE]] /ʌˈlaʊd/
 *{{en}}: [[allow]] [[:en:allow|°]]
 *{{fr}}: [[laisser]] [[:fr:laisser|°]]
 *{{hu}}: [[enged]] [[:hu:enged|°]]
-*{{de}}: [[lassne]] [[:de:lassen|°]]
+*{{de}}: [[lassen]] [[:de:lassen|°]]
 *{{it}}: [[lasciare]] [[:it:lasciare|°]]
 *{{es}}: [[dejar]] [[:es:dejar|°]]
 
