--- a/wiki/lodge.wikitext
+++ b/wiki/lodge.wikitext
@@ -9,3 +9,10 @@
 ===Derived terms===
 *[[lodger]]
 *[[lodging]]<!--noun-->
+
+*{{en}}: [[lodge]] [[:en:lodge|°]]
+*{{fr}}: [[demeurer]] [[:fr:demeurer|°]]
+*{{hu}}: [[lakik]] [[:hu:lakik|°]]
+*{{de}}: [[wohnen]] [[:de:wohnen|°]]
+*{{it}}: [[alloggiare]] [[:it:alloggiare|°]]
+*{{es}}: [[vivir]] [[:es:vivir|°]]
