--- a/wiki/elsewhere.wikitext
+++ b/wiki/elsewhere.wikitext
@@ -6,3 +6,10 @@
 
 #In any other place; as, these trees are not to be found elsewhere.
 #In some other place; in other places, indefinitely; as, it is reported in town and elsewhere.
+
+*{{en}}: [[elsewhere]] [[:en:elsewhere|°]]
+*{{fr}}: [[ailleurs]] [[:fr:ailleurs|°]]
+*{{hu}}: [[máshol]] [[:hu:máshol|°]]
+*{{de}}: [[anderswo]] [[:de:anderswo|°]]
+*{{it}}: [[altrove]] [[:it:altrove|°]]
+*{{es}}: [[en]] [[otra]] [[parte]] [[:es:parte|°]]
