--- a/wiki/offer.wikitext
+++ b/wiki/offer.wikitext
@@ -1,3 +1,6 @@
+noun
+
+
 ===Translations===
 
 *Dutch: [[aanzoek]], [[aanzoek]], [[aanbieden]], [[aanbieding]], [[aanbod]], [[aanbieden]], [[indienen]], [[presenteren]], [[voorstellen]], [[vertonen]]
@@ -10,3 +13,13 @@
 *Swedish: [[erbjuda]] (verb)
 
 {{cleanup}}
+
+
+verb
+
+*{{en}}: [[offer]] [[:en:offer|°]]
+*{{fr}}: [[offrir]] [[:fr:offrir|°]]
+*{{hu}}: [[kínál]] [[:hu:kínál|°]]
+*{{de}}: [[anbieten]] [[:de:anbieten|°]]
+*{{it}}: [[offrire]] [[:it:offrire|°]]
+*{{es}}: [[ofrecer]] [[:es:ofrecer|°]]
