--- a/wiki/plentiful.wikitext
+++ b/wiki/plentiful.wikitext
@@ -1,4 +1,9 @@
-*{{en}}: [[plentiful]] [[:en:plentiful|°]]
+{{-en-}}
+{{-adj-}}
+'''plentiful'''
+# Exsisting in large number or ample amount.
+# Yielding abundance.
+{{-trans-}}
 *{{fr}}: [[ample]] [[:fr:ample|°]]
 *{{hu}}: [[bőséges]] [[:hu:bőséges|°]]
 *{{de}}: [[reichlich]] [[:de:reichlich|°]]
