--- a/wiki/choad.wikitext
+++ b/wiki/choad.wikitext
@@ -9,4 +9,4 @@
 
 #(''slang'') a [[penis]]
 #(''slang'') a [[contemptible]] person
-The bumpy skin between tha scrotum and the anus.  Tastes like chicken.
+The bumpy skin between the scrotum and the anus.  Tastes like chicken.
