--- a/wiki/masi.wikitext
+++ b/wiki/masi.wikitext
@@ -1,4 +1,15 @@
-masi: fish [Kurdish]
+==Italian==
+===Noun===
+'''masi''' ''m''
+
+# plural of [[maso]]
+
+----
+==Kurdish==
+
+'''masi'''
+
+#[[fish]]
 
 MASI: Laboratories (F) [ETSI and 3GPP]
 
