--- a/wiki/Mattathias.wikitext
+++ b/wiki/Mattathias.wikitext
@@ -1,1 +1,6 @@
-Mattathias
+{{-en-}}
+{{-proper-}}
+'''Mattathias'''
+# Son of Amos, in the genealogy of Christ. (Luke 3:25)
+# Son of Semei, in the genealogy of Christ. (Luke 3:26)
+# The father of Judas Maccabaeus.
