/* See also */ <ken#40161>

--- a/wiki/ken.wikitext
+++ b/wiki/ken.wikitext
@@ -43,7 +43,7 @@
 *[[saya]] ([[鞘]], [[さや]])
 *[[shoto]]
 *[[tachi]]
-*[[tanto]] ([[短刀]], たんとう)
+*[[tantō]] ([[短刀]], たんとう)
 *[[tsurugi]] ([[剣]], [[劍]], つるぎ)
 *[[wakizashi]] ([[脇差]])
 <!-- sources: http://www.aikiweb.com/forums/archive/index.php/t-1870.html -->
