/* See also */ <bokken#51584>

--- a/wiki/bokken.wikitext
+++ b/wiki/bokken.wikitext
@@ -20,16 +20,16 @@ From Japanese [[木剣]] (ぼっけん, bokken), ''wooden sword''.
 
 ===See also===
 *[[boku]]
-*[[daito]]
-*[[iaito]]
+*[[daitō]]
+*[[iaitō]]
 *[[katana]] ([[刀]], かたな)
 *[[ken]] ([[剣]], [[劍]], けん)
-*[[kendo]]
+*[[kendō]]
 *[[kodachi]]
 *[[saya]] ([[鞘]], [[さや]])
 *[[shinken]]
-*[[shoto]]
+*[[shōtō]]
 *[[tachi]]
-*[[tanto]] ([[短刀]], たんとう)
+*[[tantō]] ([[短刀]], たんとう)
 *[[tsurugi]] ([[剣]], [[劍]], つるぎ)
 *[[wakizashi]] ([[脇差]])
