Added definition and wikipedia link. <apollo#37341>

--- a/wiki/apollo.wikitext
+++ b/wiki/apollo.wikitext
@@ -1,6 +1,8 @@
 ===Proper noun===
 '''Apollo'''
 
+# ''(Greek mythology)'': The son of [[Zeus]] and [[Leto]], and the twin brother of [[Artemis]]. He was the god of light, music, prophecy, medicine, poetry, dance, and more.  
+
 ====Translations====
 *Greek: [[Απολλων]]
 *Slovene: [[Apolon]] ''m''
@@ -12,3 +14,7 @@
 #[[Apollo]]
 ====Derived Words====
 :[[Apollinaris]]
+
+===External links===
+
+* [[w:Apollo|Wikipedia article on Apollo]]
