--- a/wiki/%E7%9C%9F.wikitext
+++ b/wiki/%E7%9C%9F.wikitext
@@ -15,12 +15,13 @@
 
 * '''Graphical Significance and Origin''': 
 
+* '''Style''': [[jiantizi]], [[shinjitai]]
+
 * '''Common Meaning''': real, actual, true, genuine
 
-* '''Style''': [[jiantizi]], [[shinjitai]]
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -32,15 +33,78 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': jan1
 
+===Compounds===
+*[[真才实学]]
+*[[真诚]]
+*[[真传]]
+*[[真刀真枪]]
+*[[真谛]]
+*[[真分式]]
+*[[真分数]]
+*[[真格的]]
+*[[真个]]
+*[[真迹]]
+*[[真假]]
+*[[真金不怕火炼]]
+*[[真菌]]
+*[[真空]]
+*[[真空处理]]
+*[[真理]]
+*[[真面目]]
+*[[真品]]
+*[[真凭实据]]
+*[[真枪实弹]]
+*[[真切]]
+*[[真情]]
+*[[真确]]
+*[[真人]]
+*[[真人真事]]
+*[[真善美]]
+*[[真身]]
+*[[真实]]
+*[[真是]]
+*[[真率]]
+*[[真丝]]
+*[[真髓]]
+*[[真伪]]
+*[[真相]]
+*[[真心]]
+*[[真心实意]]
+*[[真性]]
+*[[真言]]
+*[[真意]]
+*[[真赃实据]]
+*[[真章儿]]
+*[[真正]]
+*[[真知]]
+*[[真知灼见]]
+*[[真挚]]
+*[[真珠]]
+*[[真主]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[しん]] (shin)
 ** '''[[Kun]]''': [[ま]] (ma), [[まこと]] (makoto), [[まことに]] (makotoni) 
+
+===Compounds===
+*[[真意]]
+*[[真価]]
+*[[真偽]]
+*[[真紅]]
+*[[真空]]
+*[[真剣]]
+*[[真摯]]
+*[[真実]]
+*[[真情]]
+*[[真否]]
+*[[真理]]
+*[[真面目]]
 
 * '''Other info''':  
 
