--- a/wiki/%E7%9C%9F.wikitext
+++ b/wiki/%E7%9C%9F.wikitext
@@ -17,7 +17,7 @@
 
 * '''Style''': [[jiantizi]], [[shinjitai]]
 
-* '''Common Meaning''': real, actual, true, genuine
+* '''Common Meaning''': [[real]], [[actual]], [[true]], [[genuine]]
 
 ----
 
