--- a/wiki/Mattathias.wikitext
+++ b/wiki/Mattathias.wikitext
@@ -1,6 +1,7 @@
-{{-en-}}
-{{-proper-}}
+==English==
+===Proper noun===
 '''Mattathias'''
+
 # Son of Amos, in the genealogy of Christ. (Luke 3:25)
 # Son of Semei, in the genealogy of Christ. (Luke 3:26)
 # The father of Judas Maccabaeus.
