--- a/wiki/Artemis.wikitext
+++ b/wiki/Artemis.wikitext
@@ -5,6 +5,12 @@
 
 # ''(Greek mythology)'': The daughter of [[Leto]] and [[Zeus]], and twin sister of [[Apollo]]. The [[goddess]] of the hunt, wild animals, healing, wilderness, chastity, and childbirth.
 
+===Translations===
+*Italian: [[Artemide]] ''f''
+
+===See also===
+*[[Diana]]
+
 ===External links===
 
 * [[w:Artemis|Wikipedia article on Artemis]]
