/* Proper noun */ <Artemis#66708>

--- a/wiki/Artemis.wikitext
+++ b/wiki/Artemis.wikitext
@@ -3,7 +3,7 @@
 ===Proper noun===
 '''Artemis'''
 
-# ''(Greek mythology)'': The daughter of [[Leto]] and [[Zeus]], and twin sister of [[Apollo]]. The [[goddess]] of the hunt, wild animals, healing, wilderness, chastity, and childbirth.
+# (''Greek mythology''): The daughter of [[Leto]] and [[Zeus]], and twin sister of [[Apollo]]. The [[goddess]] of the hunt, wild animals, healing, wilderness, chastity, and childbirth.
 
 ===Translations===
 *Italian: [[Artemide]] ''f''
