--- a/wiki/Athena.wikitext
+++ b/wiki/Athena.wikitext
@@ -3,7 +3,14 @@
 ===Proper noun===
 '''Athena'''
 
-# ''(Greek mythology)'': A [[goddess]] of wisdom, strategic warfare and crafts (particularly weaving).
+# (''Greek mythology''): A [[goddess]] of wisdom, strategic warfare and crafts (particularly weaving).
+
+===Translations===
+*Italian: [[Atena]] ''f''
+
+===See also===
+*[[Athens]]
+*[[Minerva]]
 
 ===External links===
 
