--- a/wiki/apollo.wikitext
+++ b/wiki/apollo.wikitext
@@ -1,17 +1,34 @@
+==English==
 ===Proper noun===
 '''Apollo'''
 
-# ''(Greek mythology)'': The son of [[Zeus]] and [[Leto]], and the twin brother of [[Artemis]]. He was the god of light, music, prophecy, medicine, poetry, dance, and more.  
+# (''Greek mythology''): The son of [[Zeus]] and [[Leto]], and the twin brother of [[Artemis]]. He was the god of light, music, prophecy, medicine, poetry, dance, and more.  
 
 ====Translations====
 *Greek: [[Απολλων]]
 *Slovene: [[Apolon]] ''m''
+
 ----
+
+==Italian==
+===Proper Noun===
+'''Apollo''' ''f''
+
+# Apollo
+
+===Noun===
+'''apollo''' ''f''
+
+# a butterfly
+
+----
+
 ==Latin==
 ===Proper Noun===
 '''Apollo''' ''f'' (Plural: [[Apollines]])
 
 #[[Apollo]]
+
 ====Derived Words====
 :[[Apollinaris]]
 
