/* Translations */ <ring finger#4601>

--- a/wiki/ring_finger.wikitext
+++ b/wiki/ring_finger.wikitext
@@ -18,21 +18,23 @@
 ===Translations===
 *[[Basque]]: [[haznagi]]
 *[[Breton]]: [[biz-gwalenn]] ''m''
-*[[Bulgarian]]: [[безименен пръст]] ''m''
+*Bulgarian: [[безименен пръст]] ''m''
 *[[Catalan]]: [[dit anular]] ''m'', [[anular]] ''m''
-*[[Danish]]: [[ringfinger]]
-*[[Dutch]]: [[ringvinger]] ''m''
+*Chinese: [[无名指]]
+*Danish: [[ringfinger]]
+*Dutch: [[ringvinger]] ''m''
 *[[Esperanto]]: [[ringofingro]]
-*[[French]]: [[annulaire]] ''m''
+*French: [[annulaire]] ''m''
 *[[Frisian]]: [[ringfinger]]
-*[[German]]: [[Ringfinger]] ''m''
-*[[Indonesian]]: [[jari]] [[manis]]
+*German: [[Ringfinger]] ''m''
+*Indonesian: [[jari manis]]
 *[[Interlingua]]: [[digito anular]], [[anular]]
-*[[Japanese]]: [[薬指]] (くすりゆび, kusuriyubi)
-*[[Korean]]: [[약지]] [藥指] (yakji)
-*[[Polish]]: [[palec]] [[serdeczny]] ''m''
-*[[Portuguese]]: [[dedo anular]] ''m'', [[anular]] ''m''
-*[[Romanian]]: [[inelar]] ''m''
-*[[Slovak]]: [[prstenník]] ''m''
-*[[Slovene]]: [[prstanec]] ''m''
-*[[Spanish]]: [[dedo anular]] ''m'', [[anular]] ''m''
+*Italian: [[anulare]] ''m''
+*Japanese: [[薬指]] (くすりゆび, kusuriyubi)
+*Korean: [[약지]] [藥指] (yakji)
+*Polish: [[palec]] [[serdeczny]] ''m''
+*Portuguese: [[dedo anular]] ''m'', [[anular]] ''m''
+*Romanian: [[inelar]] ''m''
+*Slovak: [[prstenník]] ''m''
+*Slovene: [[prstanec]] ''m''
+*Spanish: [[dedo anular]] ''m'', [[anular]] ''m''
