--- a/wiki/thumb.wikitext
+++ b/wiki/thumb.wikitext
@@ -22,6 +22,7 @@
 *[[Breton]]: [[biz-meud]] ''m'' bizied-meud ''pl'', [[meud]] ''m'' -où ''pl''
 *Bulgarian: [[палец]] ''m''
 *[[Catalan]]: [[polze]] ''m''
+*Chinese: [[大拇指]]
 *Danish: [[tommelfinger]], [[tommeltot]]
 *Dutch: [[duim]] ''m''
 *[[Esperanto]]: [[polekso]], [[dikfingro]]
@@ -31,7 +32,7 @@
 *German: [[Daumen]] ''m'' [[:de:Daumen|(de)]]
 *Indonesian: [[ibu]] [[jari]]
 *[[Interlingua]]: [[pollice]]
-*Italian: [[pollice]] ''m''
+*Italian: [[pollice]] ''m'', [[dito grosso]] ''m''
 *Japanese: [[親指]] (おやゆび, oyayubi)
 *Korean: [[엄지]] (eomji), [[엄지손가락]] (eomjisongarak)
 *Latin: [[pollex]] ''m''
