--- a/wiki/forefinger.wikitext
+++ b/wiki/forefinger.wikitext
@@ -17,21 +17,23 @@ The first [[finger]] next to the [[thumb]]
 *[[Breton]]: [[biz-yod]] ''m''
 *[[Bulgarian]]: [[показалец]] ''m''
 *[[Catalan]]: [[índex]] ''m''
+*Chinese: [[食指]] (shizhi)
 *[[Danish]]: [[pegefinger]]
 *[[Dutch]]: [[wijsvinger]] ''m''
 *[[Esperanto]]: [[montra fingro]]
-*[[French]]: [[index]] ''m''
+*French: [[index]] ''m''
 *[[Frisian]]: [[foarste finger]], [[wiisfinger]]
-*[[German]]: [[Zeigefinger]] ''m''
-*[[Indonesian]]: [[jari]] [[telunjuk]]
+*German: [[Zeigefinger]] ''m''
+*Indonesian: [[jari telunjuk]]
 *[[Interlingua]]: [[digito indice]], [[indice]]
-*[[Japanese]]: [[人差し指]] (ひとさしゆび, hitosashiyubi)
+*Italian: [[indice]]
+*Japanese: [[人差し指]] (ひとさしゆび, hitosashiyubi)
 *[[Polish]]: [[palec]] [[wskazujący]] ''m''
-*[[Portuguese]]: [[dedo indicador]] ''m'', [[indicador]] ''m'', [[índice]] ''m'', [[dedo índex]] ''m'', [[índex]] ''m''
+*Portuguese: [[dedo indicador]] ''m'', [[indicador]] ''m'', [[índice]] ''m'', [[dedo índex]] ''m'', [[índex]] ''m''
 *[[Romanian]]: [[deget arătător]] ''n'', [[arătător]] ''n''
 *[[Slovak]]: [[ukazovák]] ''m''
 *[[Slovene]]: [[kazalec]] ''m''
-*[[Spanish]]: [[índice]] ''m''
+*Spanish: [[índice]] ''m''
 *Swedish: [[pekfinger]]
 *[[Turkish]]: [[işaretparmağı]] [-nı]
 *[[Vietnamese]]: [[ngón tay trỏ]]
