/* Translations */ <middle finger#4600>

--- a/wiki/middle_finger.wikitext
+++ b/wiki/middle_finger.wikitext
@@ -5,19 +5,21 @@ The [[finger]] between the [[forefinger]] and the [[ring finger]]. This is the l
 ===Translations===
 *[[Basque]]: [[hatz erdiko]]
 *[[Breton]]: [[biz-bras]] ''m'', [[biz-kreiz]] ''m''
-*[[Bulgarian]]: [[среден]] [[пръст]] ''m''
-*[[Catalan]]: [[dit del mig]] ''m''
+*Bulgarian: [[среден]] [[пръст]] ''m''
+*Catalan: [[dit del mig]] ''m''
+*Chinese: [[中指]] (zhongzhi)
 *[[Danish]]: [[langfinger]], [[langemand]]
 *[[Dutch]]: [[middelvinger]] ''m''
 *[[Esperanto]]: [[longa fingro]], [[meza fingro]]
-*[[French]]: [[majeur]] ''m'', [[doigt du milieu]] ''m'', [[médius]] ''m''
+*French: [[majeur]] ''m'', [[doigt du milieu]] ''m'', [[médius]] ''m''
 *[[Frisian]]: [[middelste finger]]
-*[[German]]: [[Mittelfinger]] ''m''
-*[[Indonesian]]: [[jari]] [[tengah]]
+*German: [[Mittelfinger]] ''m''
+*Indonesian: [[jari tengah]]
 *[[Interlingua]]: [[digito medie]]
-*[[Japanese]]: [[中指]] (なかゆび, nakayubi)
-*[[Polish]]: [[palec]] [[środkowy]] ''m''
-*[[Portuguese]]: [[dedo médio]] ''m''
-*[[Romanian]]: [[deget mijlociu]] ''n''
+*Italian: [[medio]]
+*Japanese: [[中指]] (なかゆび, nakayubi)
+*Polish: [[palec]] [[środkowy]] ''m''
+*Portuguese: [[dedo médio]] ''m''
+*Romanian: [[deget mijlociu]] ''n''
 *[[Slovene]]: [[sredinec]] ''m''
-*[[Spanish]]: [[dedo de en medio]] ''m'', [[dedo del corazón]] ''m''
+*Spanish: [[dedo de en medio]] ''m'', [[dedo del corazón]] ''m''
