/* Translations */ <little finger#4602>

--- a/wiki/little_finger.wikitext
+++ b/wiki/little_finger.wikitext
@@ -14,13 +14,14 @@
 *[[Basque]]: [[atxiki]]
 *[[Breton]]: [[biz-bihan]] ''m''
 *[[Catalan]]: [[dit petit]] ''m''
+*Chinese: [[小指]] (xiaozhi)
 *Danish: [[lillefinger]]
 *Dutch: [[pink]] ''m''
 *[[Esperanto]]: [[malgranda fingro]]
 *French: [[petit doigt]] ''m'', [[auriculaire]] ''m''
 *[[Frisian]]: [[pink]]
 *German: [[kleine Finger]] ''m''
-*Indonesian: [[jari]] [[kelingking]]
+*Indonesian: [[jari kelingking]]
 *[[Interlingua]]: [[digito auricular]], [[auricular]]
 *Japanese: [[小指]] (こゆび, koyubi)
 *Korean: [[새끼손가락]] (saekkisongarak)
