--- a/wiki/%E8%AB%88.wikitext
+++ b/wiki/%E8%AB%88.wikitext
@@ -14,11 +14,11 @@
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
-*** '''[[Pinyin]]''': zhùi (zhui4)
+*** '''[[Pinyin]]''': zhuì (zhui4)
 *** '''[[Wade-Giles]]''': chui<sup>4</sup>
 *** '''[[Yale]]''': 
 ** '''[[Cantonese]]'''
@@ -30,7 +30,7 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[すい]] (sui), [[ずい]] (zui), [[に]] (ni), [[ち]] (chi)
