--- a/wiki/thumb.wikitext
+++ b/wiki/thumb.wikitext
@@ -30,7 +30,7 @@
 *French: [[pouce]] ''m''
 *[[Frisian]]: [[tomme]]
 *German: [[Daumen]] ''m'' [[:de:Daumen|(de)]]
-*Indonesian: [[ibu]] [[jari]]
+*Indonesian: [[ibu jari]]
 *[[Interlingua]]: [[pollice]]
 *Italian: [[pollice]] ''m'', [[dito grosso]] ''m''
 *Japanese: [[親指]] (おやゆび, oyayubi)
