/* Proper Noun */ sp <agency#41011>

--- a/wiki/agency.wikitext
+++ b/wiki/agency.wikitext
@@ -17,5 +17,5 @@ IPA: [[WEAE]] /ˈeː.ʤən.si/
 [[Action]]; [[operation]]; [[efficiency]]; [[management]].
 
 ===Proper Noun===
-# Agency, Iowa (zipcode 52530)
-# Agency, Missouri (zipcode 64401)
+# Agency, Iowa (ZIP code 52530)
+# Agency, Missouri (ZIP code 64401)
