--- a/wiki/polyamory.wikitext
+++ b/wiki/polyamory.wikitext
@@ -1,3 +1,4 @@
+{{rfd}}
 The practice, state or ability of having more than one sexual loving relationship at the same time, with the full knowledge and consent of all partners involved.
 
 Word and definition coinage are attributed to Morning Glory Zell Ravenheart.
