--- a/wiki/uber-.wikitext
+++ b/wiki/uber-.wikitext
@@ -2,7 +2,7 @@
 
 ===Etymology===
 
-From the German word über, which means 'above' or 'over'.
+From the German word [[über]], which means 'above' or 'over'.
 
 ===Alternate Spelling===
 #über
