--- a/wiki/employ.wikitext
+++ b/wiki/employ.wikitext
@@ -1,4 +1,10 @@
-*{{en}}: [[employ]] [[:en:employ|°]]
+==English==
+===Verb===
+'''employ'''
+#To [[hire]] for work
+#To put something into use or service
+
+===Translation
 *{{fr}}: [[employer]] [[:fr:employer|°]]
 *{{hu}}: [[alkalmaz]] [[:hu:alkalmaz|°]]
 *{{de}}: [[anstellen]] [[:de:anstellen|°]]
