--- a/wiki/employ.wikitext
+++ b/wiki/employ.wikitext
@@ -3,8 +3,7 @@
 '''employ'''
 #To [[hire]] for work
 #To put something into use or service
-
-===Translation
+====Translation====
 *{{fr}}: [[employer]] [[:fr:employer|°]]
 *{{hu}}: [[alkalmaz]] [[:hu:alkalmaz|°]]
 *{{de}}: [[anstellen]] [[:de:anstellen|°]]
