/* Derived terms */ <lodge#59238>

--- a/wiki/lodge.wikitext
+++ b/wiki/lodge.wikitext
@@ -9,8 +9,7 @@
 ===Derived terms===
 *[[lodger]]
 *[[lodging]]<!--noun-->
-
-*{{en}}: [[lodge]] [[:en:lodge|°]]
+====Translation====
 *{{fr}}: [[demeurer]] [[:fr:demeurer|°]]
 *{{hu}}: [[lakik]] [[:hu:lakik|°]]
 *{{de}}: [[wohnen]] [[:de:wohnen|°]]
