--- a/wiki/elsewhere.wikitext
+++ b/wiki/elsewhere.wikitext
@@ -7,7 +7,7 @@
 #In any other place; as, these trees are not to be found elsewhere.
 #In some other place; in other places, indefinitely; as, it is reported in town and elsewhere.
 
-*{{en}}: [[elsewhere]] [[:en:elsewhere|°]]
+====Translation====
 *{{fr}}: [[ailleurs]] [[:fr:ailleurs|°]]
 *{{hu}}: [[máshol]] [[:hu:máshol|°]]
 *{{de}}: [[anderswo]] [[:de:anderswo|°]]
