--- a/wiki/hinder.wikitext
+++ b/wiki/hinder.wikitext
@@ -10,7 +10,7 @@
 #To cause someone to be behind.
 #To make it difficult for someone or something to do something.
 
-*{{en}}: [[hinder]] [[:en:hinder|°]]
+====Translation====
 *{{fr}}: [[entraver]] [[:fr:entraver|°]]
 *{{hu}}: [[akadályoz]] [[:hu:akadályoz|°]]
 *{{de}}: [[hindern]] [[:de:hindern|°]]
