--- a/wiki/pace.wikitext
+++ b/wiki/pace.wikitext
@@ -32,7 +32,15 @@
 ----
 
 ==Italian==
+===Etymology===
+Latin ''[[pax]]'', ''pacis''
 ===Noun===
 '''pace''' ''f''
 
 #[[peace]]
+
+===Related terms===
+*[[pacatezza]]
+*[[pacato]]
+*[[pacificare]]
+*[[pacifico]]
