--- a/wiki/Venice_turpentine.wikitext
+++ b/wiki/Venice_turpentine.wikitext
@@ -1,5 +1,6 @@
 ==English==
 ===Noun===
 '''Venice Turpentine'''
-# A thick substance used as a component in artists' oil painting to create glossy, translucent glazes. 
-Its use has been replaced by synthetic glaze mediums such as liquin.
+# A thick substance used as a component in artists' oil painting to create glossy, translucent [[glaze]]s 
+====Note====
+*Its use has been replaced by [[synthetic]] glaze mediums such as liquin.
