--- a/wiki/pace.wikitext
+++ b/wiki/pace.wikitext
@@ -23,7 +23,7 @@
 *Greek: [[ρυθμός]] ''m''
 *Hungarian [[lépés]]
 *Italian: [[passo]] ''m''
-*Japanese: [[ペース]]
+*Japanese: [[歩調]], [[歩幅]], [[ペース]]
 *Korean: [[걸음]]
 *Portuguese: [[ritmo]] ''m''
 *Russian: [[побежка]] ''f'' (pobezhka)
