--- a/wiki/levanter.wikitext
+++ b/wiki/levanter.wikitext
@@ -1,2 +1,3 @@
+==English==
 ===Noun===
-An Easterly wind that blows from the Mediterranean, through the straits of Gibraltar to the Atlantic.
+#An Easterly wind that blows from the Mediterranean, through the straits of Gibraltar to the Atlantic.
