<Little Red Riding Hood#66653>

--- a/wiki/Little_Red_Riding_Hood.wikitext
+++ b/wiki/Little_Red_Riding_Hood.wikitext
@@ -1,8 +1,7 @@
 ==English==
 ===Proper noun===
-'''[[Little]] [[Red]] [[Riding]] [[Hood]]'''<!-- wikify [[riding hood]] together if that's a term -->
-
-# {{substub}}
+'''Little Red Riding [[Hood]]'''
+# ''Fairy Tale.'' The young girl in the well-known fairly tale of the same name.
 
 ====Translations====
 *German: [[Rotkäppchen]]
