--- a/wiki/necromancy.wikitext
+++ b/wiki/necromancy.wikitext
@@ -1,3 +1,4 @@
 ==English==
 ===Noun===
-*[[Magic]] involving the [[dead]] or [[death]]
+'''necromancy'''
+#[[Magic]] involving the [[dead]] or [[death]]
