--- a/wiki/fantasy.wikitext
+++ b/wiki/fantasy.wikitext
@@ -1,6 +1,7 @@
 ==English==
 ===Noun===
 #That which comes from one's [[imagination]]
+#The literary genre generally dealing with themes of [[magic]] and [[medieval]] technology. 
 
 ====Related words====
 *[[fantasize]]
