--- a/wiki/levanter.wikitext
+++ b/wiki/levanter.wikitext
@@ -1,3 +1,8 @@
 ==English==
 ===Noun===
+'''levanter'''
+
 #An Easterly wind that blows from the Mediterranean, through the straits of Gibraltar to the Atlantic.
+
+===Related terms===
+*[[Levant]]
