--- a/wiki/confabulate.wikitext
+++ b/wiki/confabulate.wikitext
@@ -1,3 +1,4 @@
 ==English==
 ===Verb===
-#to replace [[fact]] in one's memory with what one has imagined, to rewrite ones history with [[fantasy]]
+#''Psychology.'' To replace [[fact]] in one's memory with what one has imagined, to rewrite ones history with [[fantasy]]
+#Chat causally
