+fi, fmtting <elsewhere#61682>

--- a/wiki/elsewhere.wikitext
+++ b/wiki/elsewhere.wikitext
@@ -8,8 +8,21 @@
 #In some other place; in other places, indefinitely; as, it is reported in town and elsewhere.
 
 ====Translation====
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
+*{{fi}}: [[muualla]], [[toisaalla]]
 *{{fr}}: [[ailleurs]] [[:fr:ailleurs|°]]
 *{{hu}}: [[máshol]] [[:hu:máshol|°]]
 *{{de}}: [[anderswo]] [[:de:anderswo|°]]
 *{{it}}: [[altrove]] [[:it:altrove|°]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
 *{{es}}: [[en]] [[otra]] [[parte]] [[:es:parte|°]]
+|}
+|}
