+fi, fmtting <employ#66701>

--- a/wiki/employ.wikitext
+++ b/wiki/employ.wikitext
@@ -3,7 +3,38 @@
 '''employ'''
 #To [[hire]] for work
 #To put something into use or service
+
 ====Translation====
+'''to hire for work'''
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
+*{{fi}}: [[työllistää]], [[palkata]], [[ottaa]] [[työhön]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
+|}
+|}
+'''to put into use'''
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
+*{{fi}}: [[käyttää]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
+|}
+|}
+
+'''Translations to be checked'''
 *{{fr}}: [[employer]] [[:fr:employer|°]]
 *{{hu}}: [[alkalmaz]] [[:hu:alkalmaz|°]]
 *{{de}}: [[anstellen]] [[:de:anstellen|°]]
