--- a/wiki/shy.wikitext
+++ b/wiki/shy.wikitext
@@ -1,9 +1,13 @@
 ==English==
-
 ===Adjective===
-
 '''shy'''
 
-#Easily frightened; timid; as, a shy bird.
+#Easily frightened; [[timid]]; as, a shy bird.
 #Reserved; coy; disinclined to familiar approach.
 #Cautious; wary; suspicious.
+
+===Translations===
+*Chinese: [[害羞的]], [[腼腆的]]
+*French: [[timide]]
+*Italian: [[timido]]
+*Japanese: [[恥ずかしがりの]]
