--- a/wiki/chav.wikitext
+++ b/wiki/chav.wikitext
@@ -3,3 +3,12 @@
 '''chav''' (''plural'' '''chavs''')
 
 #(''British, derogatory'') A member of the [[working class]] in the [[United Kingdom]] who is seen as [[under-educated]]; to have poor taste, especially in their choice of clothes; and to have poor social skills.
+
+
+
+
+
+===See also===
+*[[pikey]]
+*[[trailer trash]]
+*[[white trash]]
